# deepin-water-reminder

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md
debian/: changelog  control  copyright  deepin-water-reminder.desktop  rules
docs/: 代码设计文档.md  需求文档.md
resources/: qml.qrc
resources/animations/: manifest.json
resources/animations/aurora/: AuroraFlow.qml
resources/animations/bamboo/: BambooRain.qml
resources/animations/cherry/: CherryBlossom.qml
resources/animations/galaxy/: GalaxySpiral.qml
resources/animations/inferno/: FireInferno.qml
resources/animations/ocean/: OceanWave.qml
resources/animations/storm/: ThunderStorm.qml
resources/animations/test/: RedTest.qml
resources/qml/: AboutPanel.qml  AnimatedText.qml  AnimationPlayer.qml  DrinkRecordPanel.qml  SettingsPanel.qml  TransparentOverlay.qml  main.qml
resources/translations/: deepin-water_en_US.qm  deepin-water_en_US.ts
src/: CMakeLists.txt  main.cpp
src/animation/: AnimationLoader.cpp  AnimationLoader.h  AnimationManager.cpp  AnimationManager.h
src/app/: AppContext.cpp  AppContext.h  Application.cpp  Application.h
src/core/: AnimationDescriptor.h  DrinkTracker.cpp  DrinkTracker.h  QuoteManager.cpp  QuoteManager.h  ReminderEngine.cpp  ReminderEngine.h  SoundManager.cpp  SoundManager.h
src/settings/: SettingsManager.cpp  SettingsManager.h
src/tray/: TrayManager.cpp  TrayManager.h
src/ui/: QmlBridge.cpp  QmlBridge.h
tests/: CMakeLists.txt  test_DrinkTracker.cpp  test_ReminderEngine.cpp  test_SettingsManager.cpp
